--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a-assets>
         <a-asset-item
           id="bowser"
-          src="https://shahidkhan12x.github.io/3d/steam_engine.glb"
+          src="https://cdn.glitch.global/de24d206-618b-4a45-8caa-21f4b2e3df46/steam_engine.glb"
         >
         </a-asset-item>
       </a-assets>
@@ -40,7 +40,7 @@
         <a-entity
           id="bowser-model"
           gltf-model="#bowser"
-          position="0.6 0 0"
+          position="0.1 0 0"
           scale="0.001 0.001 0.001"
           class="clickable"
           gesture-handler
